[package]
name = "cdrs-bug-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.19.2"
tracing-subscriber = "0.3.14"
cdrs-tokio = { git = "https://github.com/conorbros/cdrs-tokio", branch = "bug" }
